--- a/ycjlibrary/build.gradle
+++ b/ycjlibrary/build.gradle
@@ -27,14 +27,18 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
-
+    //RecyclerView
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-
-    compile 'com.blankj:utilcode:1.9.3' //引用大神的常用工具类
-
+    //引用大神的常用工具类
+    compile 'com.blankj:utilcode:1.9.3'
+    //网络请求
     compile 'io.reactivex:rxjava:1.1.8'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //glide加载图片
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    //分割线
+    compile "com.yqritc:recyclerview-flexibledivider:1.4.0"
 }
